--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8854 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8857 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=kexizeroing.github.io/Notes%20on%20running%20code%20online%20in%20browser.html>2024-08-12 Notes on running code online in browser</a></li>
+
+<li><a href=iphyer.github.io/AWS%20%E4%BD%BF%E7%94%A8%E6%B3%A8%E6%84%8F%E7%82%B9%E6%80%BB%E7%BB%93.html>2024-08-10 AWS 使用注意点总结</a></li>
+
+<li><a href=codeinchinese.com/%E4%BB%8E%E4%BE%8B%E7%A8%8B%E7%9C%8B%E4%BB%93%E9%A2%89%E4%B8%8E%E6%9C%A8%E5%85%B0%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E8%AE%BE%E8%AE%A1%EF%BC%88%E4%B8%80%EF%BC%89.html>2024-08-10 从例程看仓颉与木兰编程语言设计（一）</a></li>
 
 <li><a href=lutaonan.com/%E3%80%8C%E4%BB%A3%E7%A0%81%E8%89%BA%E6%9C%AF%E5%AE%B6%E3%80%8D%E4%B8%8D%E4%BC%9A%E8%A2%AB%20AI%20%E5%8F%96%E4%BB%A3.html>2024-08-10 「代码艺术家」不会被 AI 取代</a></li>
 
