--- a/iphyer.github.io/搬家记录5: Year 2024.html
+++ b/iphyer.github.io/搬家记录5: Year 2024.html
@@ -69,16 +69,16 @@ comments: true</p>
 </li>
 <li>Costco</li>
 <li>Set up new utility and autopay</li>
-<li><p>USPS Forward Request</p>
-</li>
+<li>USPS Forward Request </li>
 <li><p>Closing utility Service</p>
 <ul>
-<li>electricity</li>
-<li>water</li>
-<li>internet</li>
-<li>rental insurance</li>
-<li>others</li>
+<li>internet：return Spectrum equipment </li>
+<li>water: Apartment takes care</li>
+<li>electricity: City of Austin Utilities: Stop service request</li>
+<li>rental insurance: eRenterplan Website</li>
+<li>etc.</li>
 </ul>
 </li>
-<li>Returning Keys</li>
+<li><p>Returning Keys</p>
+</li>
 </ol>
