--- a/kexizeroing.github.io/Add watermark to images.html
+++ b/kexizeroing.github.io/Add watermark to images.html
@@ -85,6 +85,23 @@ tags: [code]</p>
 <blockquote><p>Data URLs, URLs prefixed with the <code>data:</code> scheme, allow content creators to embed small files inline in documents. They are composed of four parts: a prefix (<code>data:</code>), a MIME type, an optional base64 token if non-textual, and the data itself: <code>data:[&lt;mediatype&gt;][;base64],&lt;data&gt;</code></p>
 <p><code>toDataURL()</code> encodes the whole image in an in-memory string. For larger images, this can have performance implications, and may even overflow browsers' URL length limit when assigned to <code>HTMLImageElement.src</code>. You should generally prefer <code>HTMLCanvasElement.toBlob()</code> instead, in combination with <code>URL.createObjectURL()</code>.</p>
 </blockquote>
+<p>Additionally, we want to convert the <code>dataURL</code> we receive from the drawing canvas to a <code>Blob</code>, then the <code>Blob</code> to a <code>File</code> with the file name and type specified.</p>
+<pre><code class="lang-js">async function save(dataURL: string) {
+  const blob = await fetch(dataURL).then(res =&gt; res.blob())
+  const file = new File([blob], `drawing.jpg`, { type: 'image/jpeg' })
+
+  const form = new FormData()
+  form.append('drawing', file)
+
+  // Upload the file to the server
+  await $fetch('/api/upload', {
+    method: 'POST',
+    body: form
+  })
+  .then(() =&gt; navigateTo('/'))
+  .catch((err) =&gt; alert(err.data?.message || err.message))
+}
+</code></pre>
 <h3>Add custom cropper</h3>
 <pre><code class="lang-js">// https://advanced-cropper.github.io/vue-advanced-cropper/
 &lt;Cropper
